Decouple ConversationService from Anthropic SDK
- Create domain abstractions (AIRequest, AIResponse, AITool, AIToolUse)
- Introduce AIProvider interface for multi-AI support
- Implement AnthropicProvider as concrete implementation
- Refactor ConversationService to depend on AIProvider interface
- Update CLI and Web applications to use AnthropicProvider
- Fix all tests to work with new architecture

This enables easy addition of other AI providers (e.g., Gemini) without
modifying ConversationService.

Co-authored-by: Amp <amp@sourcegraph.com>